--- a/app/src/main/res/layout/change_city_layout.xml
+++ b/app/src/main/res/layout/change_city_layout.xml
@@ -3,49 +3,48 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/city_background"
-
-    >
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <ImageButton
+        android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/backButton"
-        android:src="@drawable/left"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:background="@null"
         android:contentDescription="@string/back_button_description"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:src="@drawable/left"/>
 
     <EditText
+        android:id="@+id/queryET"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
 
-        android:hint="@string/default_query"
+        android:layout_centerVertical="true"
         android:background="@color/white"
-        android:textSize="30sp"
-        android:inputType="textAutoCorrect"
-        android:id="@+id/queryET"
-        android:textColor="@color/black"
+        android:gravity="center_vertical|center_horizontal"
+        android:hint="@string/default_query"
         android:imeOptions="actionGo"
-        android:gravity="center_vertical|center_horizontal"/>
+        android:inputType="textAutoCorrect"
+        android:textColor="@color/black"
+        android:textSize="30sp"/>
 
     <TextView
+        android:id="@+id/getWeatherTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/get_weather"
+        android:text="@string/city_name"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/white"
         android:textSize="50sp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/getWeatherTV"
         android:layout_below="@+id/backButton"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="38dp"/>
 
 </RelativeLayout>
