--- a/app/src/main/res/layout/weather_controller_layout.xml
+++ b/app/src/main/res/layout/weather_controller_layout.xml
@@ -4,67 +4,76 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/weather_background"
     tools:context="com.njit.cs656.android_weather.WeatherController">
 
 
     <TextView
+        android:id="@+id/locationTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/default_location"
-        android:id="@+id/locationTV"
-        android:textColor="@color/white"
-        android:textSize="40sp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="70dp"/>
+        android:layout_marginBottom="70dp"
+        android:text="@string/default_location"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/white"
+        android:textSize="40sp"/>
 
     <TextView
+        android:id="@+id/tempTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/default_temp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/white"
         android:textSize="90sp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/default_temp"
-        android:id="@+id/tempTV"
         android:layout_below="@+id/changeCityButton"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
     <ImageButton
+        android:id="@+id/changeCityButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/changeCityButton"
-        android:src="@drawable/change_city_symbol_small"
-        android:contentDescription="@string/change_city_description"
-        android:background="@null"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentTop="true"
+        android:background="@null"
+        android:contentDescription="@string/change_city_description"
+        android:src="@drawable/change_city_symbol_small"/>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="220dp"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentStart="false"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentLeft="false"
-        >
+        android:id="@+id/frameLayout">
 
         <ImageView
+            android:id="@+id/weatherSymbolIV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/weatherSymbolIV"
-            android:src="@drawable/dunno"
             android:contentDescription="@string/weather_description"
+            android:src="@drawable/dunno"
 
             />
     </FrameLayout>
+
+    <ProgressBar
+        android:id="@+id/loadingProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        />
 
 </RelativeLayout>
